crates/lutum/tests/ui/hook_def_singleton_output.stderr
error: #[def_hook(singleton)] does not support 'chain', 'aggregate', 'finalize', or 'output'
 --> tests/ui/hook_def_singleton_output.rs:1:19
  |
1 | #[lutum::def_hook(singleton, output = usize)]
  |                   ^^^^^^^^^
