crates/lutum/tests/ui/hook_def_singleton_output.rs
#[lutum::def_hook(singleton, output = usize)]
async fn invalid_singleton_output(label: &str) -> String {
    label.to_owned()
}

fn main() {}
